--- a/prospective-projects.html
+++ b/prospective-projects.html
@@ -292,7 +292,7 @@
               </div>
             </div>
             <hr class="mt-4 mb-5">
-            <h6 class="text-right my-5">1/4</h6>
+            <h6 class="text-right my-5">1/11</h6>
           </div>
           <div class="item">
             <div class="row pt-4">
@@ -309,11 +309,200 @@
                 </h6>
               </div>
               <div class="col-lg-12">
-                <img class="mb-4" src="images/prospective-operational-areas-mobile-25.png" alt="">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-26.png" alt="">
               </div>
             </div>
             <hr class="mt-4 mb-5">
-            <h6 class="text-right my-5">2/4</h6>
+            <h6 class="text-right my-5">2/11</h6>
+          </div>
+          <div class="item">
+            <div class="row pt-4">
+              <div class="col-3">
+                <i class="font-80 fas fa-circle text-orange"></i>
+              </div>
+              <div class="col-9 pl-4 pt-2 pb-5">
+                <h6 class="text-orange">
+                  Lorem Ipsum
+                </h6>
+                <h6>
+                  Lorem ipsum dolor sit<br>
+                  Consectetuer adipiscing
+                </h6>
+              </div>
+              <div class="col-lg-12">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-27.png" alt="">
+              </div>
+            </div>
+            <hr class="mt-4 mb-5">
+            <h6 class="text-right my-5">3/11</h6>
+          </div>
+          <div class="item">
+            <div class="row pt-4">
+              <div class="col-3">
+                <i class="font-80 fas fa-circle text-orange"></i>
+              </div>
+              <div class="col-9 pl-4 pt-2 pb-5">
+                <h6 class="text-orange">
+                  Lorem Ipsum
+                </h6>
+                <h6>
+                  Lorem ipsum dolor sit<br>
+                  Consectetuer adipiscing
+                </h6>
+              </div>
+              <div class="col-lg-12">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-28.png" alt="">
+              </div>
+            </div>
+            <hr class="mt-4 mb-5">
+            <h6 class="text-right my-5">4/11</h6>
+          </div>
+          <div class="item">
+            <div class="row pt-4">
+              <div class="col-3">
+                <i class="font-80 fas fa-circle text-orange"></i>
+              </div>
+              <div class="col-9 pl-4 pt-2 pb-5">
+                <h6 class="text-orange">
+                  Lorem Ipsum
+                </h6>
+                <h6>
+                  Lorem ipsum dolor sit<br>
+                  Consectetuer adipiscing
+                </h6>
+              </div>
+              <div class="col-lg-12">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-29.png" alt="">
+              </div>
+            </div>
+            <hr class="mt-4 mb-5">
+            <h6 class="text-right my-5">5/11</h6>
+          </div>
+          <div class="item">
+            <div class="row pt-4">
+              <div class="col-3">
+                <i class="font-80 fas fa-circle text-orange"></i>
+              </div>
+              <div class="col-9 pl-4 pt-2 pb-5">
+                <h6 class="text-orange">
+                  Lorem Ipsum
+                </h6>
+                <h6>
+                  Lorem ipsum dolor sit<br>
+                  Consectetuer adipiscing
+                </h6>
+              </div>
+              <div class="col-lg-12">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-30.png" alt="">
+              </div>
+            </div>
+            <hr class="mt-4 mb-5">
+            <h6 class="text-right my-5">6/11</h6>
+          </div>
+          <div class="item">
+            <div class="row pt-4">
+              <div class="col-3">
+                <i class="font-80 fas fa-circle text-orange"></i>
+              </div>
+              <div class="col-9 pl-4 pt-2 pb-5">
+                <h6 class="text-orange">
+                  Lorem Ipsum
+                </h6>
+                <h6>
+                  Lorem ipsum dolor sit<br>
+                  Consectetuer adipiscing
+                </h6>
+              </div>
+              <div class="col-lg-12">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-31.png" alt="">
+              </div>
+            </div>
+            <hr class="mt-4 mb-5">
+            <h6 class="text-right my-5">7/11</h6>
+          </div>
+          <div class="item">
+            <div class="row pt-4">
+              <div class="col-3">
+                <i class="font-80 fas fa-circle text-orange"></i>
+              </div>
+              <div class="col-9 pl-4 pt-2 pb-5">
+                <h6 class="text-orange">
+                  Lorem Ipsum
+                </h6>
+                <h6>
+                  Lorem ipsum dolor sit<br>
+                  Consectetuer adipiscing
+                </h6>
+              </div>
+              <div class="col-lg-12">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-32.png" alt="">
+              </div>
+            </div>
+            <hr class="mt-4 mb-5">
+            <h6 class="text-right my-5">8/11</h6>
+          </div>
+          <div class="item">
+            <div class="row pt-4">
+              <div class="col-3">
+                <i class="font-80 fas fa-circle text-orange"></i>
+              </div>
+              <div class="col-9 pl-4 pt-2 pb-5">
+                <h6 class="text-orange">
+                  Lorem Ipsum
+                </h6>
+                <h6>
+                  Lorem ipsum dolor sit<br>
+                  Consectetuer adipiscing
+                </h6>
+              </div>
+              <div class="col-lg-12">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-33.png" alt="">
+              </div>
+            </div>
+            <hr class="mt-4 mb-5">
+            <h6 class="text-right my-5">9/11</h6>
+          </div>
+          <div class="item">
+            <div class="row pt-4">
+              <div class="col-3">
+                <i class="font-80 fas fa-circle text-orange"></i>
+              </div>
+              <div class="col-9 pl-4 pt-2 pb-5">
+                <h6 class="text-orange">
+                  Lorem Ipsum
+                </h6>
+                <h6>
+                  Lorem ipsum dolor sit<br>
+                  Consectetuer adipiscing
+                </h6>
+              </div>
+              <div class="col-lg-12">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-34.png" alt="">
+              </div>
+            </div>
+            <hr class="mt-4 mb-5">
+            <h6 class="text-right my-5">10/11</h6>
+          </div>
+          <div class="item">
+            <div class="row pt-4">
+              <div class="col-3">
+                <i class="font-80 fas fa-circle text-orange"></i>
+              </div>
+              <div class="col-9 pl-4 pt-2 pb-5">
+                <h6 class="text-orange">
+                  Lorem Ipsum
+                </h6>
+                <h6>
+                  Lorem ipsum dolor sit<br>
+                  Consectetuer adipiscing
+                </h6>
+              </div>
+              <div class="col-lg-12">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-34.png" alt="">
+              </div>
+            </div>
+            <hr class="mt-4 mb-5">
+            <h6 class="text-right my-5">11/11</h6>
           </div>
         </div>
       </div>
@@ -565,7 +754,7 @@
               OPERATIONAL AREAS
             </h6>
             <h3 class="text-dark-blue">
-              Previous Projects
+              Existing Projects
             </h3>
           </div>
           <hr>
@@ -574,7 +763,7 @@
           <div class="item">
             <div class="row pt-4">
               <div class="col-3">
-                <i class="font-80 fas fa-circle text-orange"></i>
+                <i class="font-80 fas fa-circle text-dark-blue"></i>
               </div>
               <div class="col-9 pl-4 pt-2 pb-5">
                 <h6 class="text-orange">
@@ -586,7 +775,7 @@
                 </h6>
               </div>
               <div class="col-lg-12">
-                <img class="mb-4" src="images/prospective-operational-areas-mobile-25.png" alt="">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-36.png" alt="">
               </div>
             </div>
             <hr class="mt-4 mb-5">
@@ -595,7 +784,7 @@
           <div class="item">
             <div class="row pt-4">
               <div class="col-3">
-                <i class="font-80 fas fa-circle text-orange"></i>
+                <i class="font-80 fas fa-circle text-dark-blue"></i>
               </div>
               <div class="col-9 pl-4 pt-2 pb-5">
                 <h6 class="text-orange">
@@ -607,11 +796,53 @@
                 </h6>
               </div>
               <div class="col-lg-12">
-                <img class="mb-4" src="images/prospective-operational-areas-mobile-25.png" alt="">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-37.png" alt="">
               </div>
             </div>
             <hr class="mt-4 mb-5">
             <h6 class="text-right my-5">2/4</h6>
+          </div>
+          <div class="item">
+            <div class="row pt-4">
+              <div class="col-3">
+                <i class="font-80 fas fa-circle text-dark-blue"></i>
+              </div>
+              <div class="col-9 pl-4 pt-2 pb-5">
+                <h6 class="text-orange">
+                  Lorem Ipsum
+                </h6>
+                <h6>
+                  Lorem ipsum dolor sit<br>
+                  Consectetuer adipiscing
+                </h6>
+              </div>
+              <div class="col-lg-12">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-38.png" alt="">
+              </div>
+            </div>
+            <hr class="mt-4 mb-5">
+            <h6 class="text-right my-5">3/4</h6>
+          </div>
+          <div class="item">
+            <div class="row pt-4">
+              <div class="col-3">
+                <i class="font-80 fas fa-circle text-dark-blue"></i>
+              </div>
+              <div class="col-9 pl-4 pt-2 pb-5">
+                <h6 class="text-orange">
+                  Lorem Ipsum
+                </h6>
+                <h6>
+                  Lorem ipsum dolor sit<br>
+                  Consectetuer adipiscing
+                </h6>
+              </div>
+              <div class="col-lg-12">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-39.png" alt="">
+              </div>
+            </div>
+            <hr class="mt-4 mb-5">
+            <h6 class="text-right my-5">4/4</h6>
           </div>
         </div>
       </div>
@@ -643,7 +874,7 @@
               <br>
               <p>
                 Lokasi:<br>
-                Donggala
+                Donggala<br>
                 <br>
                 Lingkup Pekerjaan:<br>
                 Pertambangan Batu Andesit<br>
