--- a/business-new.html
+++ b/business-new.html
@@ -246,28 +246,44 @@ Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang te
               <div class="container py-lg-5">
                 <div class="row">
                   <div class="col-lg-3 text-center">
-                    <img class="img-fluid" src="images/logo-bisnis-psm-05.png" alt="">
-                    <h6>
-                      PT Palaran Sinergi Mas
-                    </h6>
+                    <a href="#" data-toggle="modal" data-target="#exampleModal">
+                      <img class="img-fluid" src="images/logo-bisnis-psm-05.png" alt="">
+                    </a>
+                    <a class="text-dark" href="#" data-toggle="modal" data-target="#exampleModal">
+                      <h6>
+                        PT Palaran Sinergi Mas
+                      </h6>
+                    </a>
                   </div>
                   <div class="col-lg-3 text-center">
-                    <img class="img-fluid" src="images/logo-bisnis-esp-05.png" alt="">
-                    <h6>
-                      PT Embalut Sinergi Mas
-                    </h6>
+                    <a href="#" data-toggle="modal" data-target="#exampleModal">
+                      <img class="img-fluid" src="images/logo-bisnis-esp-05.png" alt="">
+                    </a>
+                    <a class="text-dark" href="#" data-toggle="modal" data-target="#exampleModal">
+                      <h6>
+                        PT Embalut Sinergi Mas
+                      </h6>
+                    </a>
                   </div>
                   <div class="col-lg-3 text-center">
-                    <img class="img-fluid" src="images/logo-bisnis-red-05.png" alt="">
-                    <h6>
-                      PT Ghani Raya Mandiri
-                    </h6>
+                    <a href="#" data-toggle="modal" data-target="#exampleModal">
+                      <img class="img-fluid" src="images/logo-bisnis-red-05.png" alt="">
+                    </a>
+                    <a class="text-dark" href="#" data-toggle="modal" data-target="#exampleModal">
+                      <h6>
+                        PT Ghani Raya Mandiri
+                      </h6>
+                    </a>
                   </div>
                   <div class="col-lg-3 text-center">
-                    <img class="img-fluid" src="images/logo-bisnis-mount-05.png" alt="">
-                    <h6>
-                      PT Batuan Alam Persada
-                    </h6>
+                    <a href="#" data-toggle="modal" data-target="#exampleModal">
+                      <img class="img-fluid" src="images/logo-bisnis-mount-05.png" alt="">
+                    </a>
+                    <a class="text-dark" href="#" data-toggle="modal" data-target="#exampleModal">
+                      <h6>
+                        PT Batuan Alam Persada
+                      </h6>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -339,71 +355,22 @@ Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang te
   <div class="modal-dialog modal-gallery" role="document">
     <div class="modal-content">
       <div class="modal-body">
-        <div class="row d-none d-lg-flex">
+        <div class="row">
           <div class="col-lg-7 pr-lg-0">
-            <div class="carousel-gallery owl-theme">
-              <div class="item">
-                <img src="images/gallery-thumbnail-content-03.jpg" alt="">
-              </div>
-              <div class="item">
-                <img src="images/gallery-thumbnail-content-03.jpg" alt="">
-              </div>
-              <div class="item">
-                <img src="images/gallery-thumbnail-content-03.jpg" alt="">
-              </div>
-            </div>
+                <img class="w-100" src="images/gallery-thumbnail-content-03.jpg" alt="">
           </div>
-          <div class="col-lg-5 pl-lg-0">
+          <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4">
             <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
             <div class="content-wrapper d-flex">
-              <div class="inline-block">
-                  <img class="w-auto mt-lg-1" src="images/line-gray-11.png" alt="">
-              </div>
               <div class="inline-block pl-lg-4">
-                  <h2 class="text-white">
-                    Lorem Ipsum
-                  </h2>
-                  <h6 class="text-orange">
-                    Kalimantan Timur<br>
-                    23 September 2020
-                  </h6>
-                  <p class="text-white">
-                    Lorem ipsum dolor sit amet, consectetuer<br>
-                    adipiscing elit, sed diam nonummy nibh<br>
-                    euismod tincidunt ut laoreet dolore magna<br>
-                    aliquam erat volutpat.
+                <img src="images/logo-bisnis-mount-05.png" alt="">
+                  <p class="text-gray">
+                    PT Palaran Sinergi Mas bergerak dalam bidang jasa pengelolaan pelabuhan batubara di Palaran, berupa stock pile seluas 32 hektar yang dapat menampung 250.000 mt batubara disamping menyediakan konveyor dengan kapasitas hingga 1.000 mt/jam.
+                    <br><br>
+Di bawah pengawasan tenaga ahli di bidang jasa pelabuhan batubara, PSM menyediakan jasa pelabuhan berkualitas sesuai kebutuhan pelanggan, mulai dari pengangkutan, penghalusaan dan pencampuran sehingga siap dikapalkan.
                   </p>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="row d-lg-none">
-          <div class="col-lg-12 pt-5 mt-4">
-            <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
-            <h2 class="text-white mt-5 pt-5 mb-4">
-              Lorem Ipsum
-            </h2>
-            <div class="carousel-gallery owl-theme">
-              <div class="item">
-                <img src="images/gallery-thumbnail-content-03.jpg" alt="">
-              </div>
-              <div class="item">
-                <img src="images/gallery-thumbnail-content-03.jpg" alt="">
-              </div>
-              <div class="item">
-                <img src="images/gallery-thumbnail-content-03.jpg" alt="">
-              </div>
-            </div>
-            <h6 class="text-orange my-4">
-              Kalimantan Timur<br>
-              23 September 2020
-            </h6>
-            <p class="text-white">
-              Lorem ipsum dolor sit amet, consectetuer<br>
-              adipiscing elit, sed diam nonummy nibh<br>
-              euismod tincidunt ut laoreet dolore magna<br>
-              aliquam erat volutpat.
-            </p>
           </div>
         </div>
       </div>
