--- a/career.html
+++ b/career.html
@@ -204,9 +204,9 @@
         </div>
       </div>
     </div> 
-    <div class="container-fluid bg-dark-blue">
-      <div class="row py-lg-5">
-        <div class="col-lg-12 p-lg-5">
+    <div class="container-fluid career-brief">
+      <div class="row">
+        <div class="col-lg-12 px-lg-5">
           <h3 class="text-white text-center">
             Tulisan Pembuka
           </h3>
