--- a/career.html
+++ b/career.html
@@ -218,75 +218,49 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid csr-tab bg-light-gray">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-12 px-0">
-          <!-- Nav tabs -->
-          <ul class="nav nav-tabs text-center" id="myTab" role="tablist">
-            <li class="col px-0">
-              <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Kontrak Penambangan</a>
-            </li>
-            <li class="col px-0">
-              <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Anak Perusahaan dan Perusahaan Terkait</a>
-            </li>
-          </ul>
-          <!-- Tab panes -->
-          <div class="tab-content">
-            <div class="tab-pane py-lg-5 active" id="home" role="tabpanel" aria-labelledby="home-tab">
-              <div class="d-lg-flex pt-5 mt-lg-5">
-                <div class="col-lg-7 col-12 pl-lg-0" data-aos="fade-up">
-                  <img class="img-fluid" src="images/csr-program-tab-content-07.jpg" alt="">
-                </div>
-                <div class="col-lg-5 col-12 details" data-aos="fade-right">
-                  <p class="text-gray brief-details">
-                    Bisnis utama Ansaf adalah menyediakan jasa pertambangan, dalam bentuk pemindahan lapisan penutup, ekstraksi batubara, transportasi ke stock pile untuk pengiriman lebih lanjut. 
-
-Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang tenaga kerja berkualitas serta alat produksi yang tepat untuk melaksanakan kegiatan penambangan batubara.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="tab-pane py-lg-5" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-              <div class="d-lg-flex pt-5 mt-lg-5">
-                <div class="col-lg-7 col-12 pl-lg-0">
-                  <img class="img-fluid" src="images/csr-program-tab-content-08.jpg" alt="">
-                </div>
-                <div class="col-lg-5 col-12 details">
-                  <p class="text-gray brief-details">
-                    Bersama mitra-mitra yang handal Ansaf membangun kerjasama menyediakan berbagai pelayanan yang dibutuhkan dalam bisnis penambangan batubara.
-                  </p>
-                </div>
-              </div>
-              <div class="container py-lg-5">
-                <div class="row">
-                  <div class="col-lg-3 text-center">
-                    <img class="img-fluid" src="images/logo-bisnis-psm-05.png" alt="">
-                    <h6>
-                      PT Palaran Sinergi Mas
-                    </h6>
-                  </div>
-                  <div class="col-lg-3 text-center">
-                    <img class="img-fluid" src="images/logo-bisnis-esp-05.png" alt="">
-                    <h6>
-                      PT Embalut Sinergi Mas
-                    </h6>
-                  </div>
-                  <div class="col-lg-3 text-center">
-                    <img class="img-fluid" src="images/logo-bisnis-red-05.png" alt="">
-                    <h6>
-                      PT Ghani Raya Mandiri
-                    </h6>
-                  </div>
-                  <div class="col-lg-3 text-center">
-                    <img class="img-fluid" src="images/logo-bisnis-mount-05.png" alt="">
-                    <h6>
-                      PT Batuan Alam Persada
-                    </h6>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="col-lg-6">
+          <img src="images/career-img-content-03.jpg" alt=""/>
+        </div>
+        <div class="col-lg-6">
+          <h5 class="text-orange">
+            Accounting Supervisor
+          </h5>
+          <p class="font-roboto">
+            <span class="font-weight-bold">Persyaratan :</span>
+            <ul class="pl-3">
+              <li>
+                Mampu mengikuti perkembangan terbaru dalam teknologi dan perangkat lunak akuntansi
+              </li>
+              <li>
+                Memproses sejumlah besar data numerik dan memiliki keterampilan kepemimpinan yang kuat
+              </li>
+              <li>
+                Memiliki pengetahuan yang baik tentang prinsip dan praktik akuntansi
+              </li>
+              <li>
+                Menunjukkan keterampilan analitis dan pemecahan masalah yang sangat baik
+              </li>
+            </ul>
+            <br>
+            <span class="font-weight-bold">Tanggung Jawab :</span>
+            <ul class="pl-3">
+              <li>
+                Memastikan bahwa semua operasi keuangan dan akuntansi dalam departemen akuntansi 
+    berjalan lancar
+              </li>
+              <li>
+                Merekrut dan melatih staf akuntansi
+              </li>
+              <li>
+                Mengawasi pekerjaan staf akuntansi junior
+              </li>
+              <li>
+                Meninjau laporan keuangan untuk memastikan akurasi, dan merekonsiliasi akun buku besar
+              </li>
+            </ul>
+          </p>
         </div>
       </div>
     </div>
