--- a/career.html
+++ b/career.html
@@ -218,18 +218,17 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-6">
-          <img src="images/career-img-content-03.jpg" alt=""/>
+    <div class="container-fluid bg-light-gray py-lg-5">
+      <div class="row py-lg-5">
+        <div class="col-lg-5 pl-lg-0">
+          <img class="w-100 img-fluid" src="images/career-img-content-03.jpg" alt=""/>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-5 offset-lg-1 py-lg-5">
           <h5 class="text-orange">
             Accounting Supervisor
           </h5>
-          <p class="font-roboto">
-            <span class="font-weight-bold">Persyaratan :</span>
-            <ul class="pl-3">
+            <strong class="font-weight-bold">Persyaratan :</strong>
+            <ul class="pl-3 font-roboto">
               <li>
                 Mampu mengikuti perkembangan terbaru dalam teknologi dan perangkat lunak akuntansi
               </li>
@@ -243,9 +242,8 @@
                 Menunjukkan keterampilan analitis dan pemecahan masalah yang sangat baik
               </li>
             </ul>
-            <br>
-            <span class="font-weight-bold">Tanggung Jawab :</span>
-            <ul class="pl-3">
+            <strong class="font-weight-bold">Tanggung Jawab :</strong>
+            <ul class="pl-3 font-roboto">
               <li>
                 Memastikan bahwa semua operasi keuangan dan akuntansi dalam departemen akuntansi 
     berjalan lancar
@@ -260,7 +258,47 @@
                 Meninjau laporan keuangan untuk memastikan akurasi, dan merekonsiliasi akun buku besar
               </li>
             </ul>
-          </p>
+        </div>
+      </div>
+      <div class="row py-lg-5">
+        <div class="pl-lg-5 col-lg-5 py-lg-5">
+          <h5 class="text-orange">
+            Accounting Supervisor
+          </h5>
+            <strong class="font-weight-bold">Persyaratan :</strong>
+            <ul class="pl-3 font-roboto">
+              <li>
+                Mampu mengikuti perkembangan terbaru dalam teknologi dan perangkat lunak akuntansi
+              </li>
+              <li>
+                Memproses sejumlah besar data numerik dan memiliki keterampilan kepemimpinan yang kuat
+              </li>
+              <li>
+                Memiliki pengetahuan yang baik tentang prinsip dan praktik akuntansi
+              </li>
+              <li>
+                Menunjukkan keterampilan analitis dan pemecahan masalah yang sangat baik
+              </li>
+            </ul>
+            <strong class="font-weight-bold">Tanggung Jawab :</strong>
+            <ul class="pl-3 font-roboto">
+              <li>
+                Memastikan bahwa semua operasi keuangan dan akuntansi dalam departemen akuntansi 
+    berjalan lancar
+              </li>
+              <li>
+                Merekrut dan melatih staf akuntansi
+              </li>
+              <li>
+                Mengawasi pekerjaan staf akuntansi junior
+              </li>
+              <li>
+                Meninjau laporan keuangan untuk memastikan akurasi, dan merekonsiliasi akun buku besar
+              </li>
+            </ul>
+        </div>
+        <div class="col-lg-5  offset-lg-2 pr-lg-0">
+          <img class="w-100 img-fluid" src="images/career-img-content-04.jpg" alt=""/>
         </div>
       </div>
     </div>
