--- a/career.html
+++ b/career.html
@@ -223,7 +223,7 @@
         <div class="col-lg-5 pl-lg-0">
           <img class="w-100 img-fluid" src="images/career-img-content-03.jpg" alt=""/>
         </div>
-        <div class="col-lg-5 offset-lg-1 py-lg-5">
+        <div class="col-lg-6 offset-lg-1 py-lg-5 pr-lg-5">
           <h5 class="text-orange">
             Accounting Supervisor
           </h5>
