--- a/contact.html
+++ b/contact.html
@@ -267,7 +267,7 @@
     <div class="container-fluid" data-aos="fade-up">
       <div class="row">
         <div class="col-lg-12 px-0">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8153953.168616226!2d107.46645460032195!3d-3.71766482772731!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2df679e3fd85d3c5%3A0x2bb0c88e0315e87b!2sPT.%20Ansaf%20Inti%20Resources!5e0!3m2!1sen!2sid!4v1616899120793!5m2!1sen!2sid" style="border:0;" allowfullscreen="" class="w-100" height="700"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126908.54688582964!2d106.71306270309152!3d-6.277915696726387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f3fcf7feefe9%3A0xde61fbb431a279ea!2sPT.Ansaf%20Inti%20Resources!5e0!3m2!1sen!2sid!4v1628241313552!5m2!1sen!2sid" style="border:0;" allowfullscreen="" class="w-100" height="700"></iframe>
         </div>
       </div>
     </div>
